[gd_scene load_steps=7 format=3 uid="uid://btejnuyvn865g"]

[ext_resource type="Script" path="res://scripts/gameplay_scripts/waterlogged_room.gd" id="1_bf44x"]
[ext_resource type="Texture2D" uid="uid://kex21phpt41e" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/button_box.png" id="1_f42v0"]
[ext_resource type="FontFile" uid="uid://baqxnk61g1qva" path="res://assets/fonts/PixelOperator8.ttf" id="2_jn2h0"]
[ext_resource type="FontFile" uid="uid://b7ifwnhbxq6y5" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_lnim6"]
[ext_resource type="Texture2D" uid="uid://brh6b8ufqdjks" path="res://scenes/gameplay_scenes/worded_fraction_gameplay/assets/board_box.png" id="4_ue4r3"]
[ext_resource type="Texture2D" uid="uid://ccplo5vljcw1e" path="res://assets/ui/progress_bar/New Piskel(1).png" id="5_8dxfp"]

[node name="waterlogged_room" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bf44x")

[node name="bg" type="ColorRect" parent="."]
self_modulate = Color(0.729412, 0.729412, 0.729412, 1)
offset_left = -32.0
offset_top = -13.0
offset_right = 1052.0
offset_bottom = 605.0
color = Color(0.207843, 0.168627, 0.25098, 1)

[node name="board" type="MarginContainer" parent="."]
offset_left = 87.0
offset_top = 44.0
offset_right = 170.0
offset_bottom = 107.0
scale = Vector2(8, 8)

[node name="NinePatchRect" type="NinePatchRect" parent="board"]
layout_mode = 2
texture = ExtResource("1_f42v0")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="subtraction" type="MarginContainer" parent="."]
offset_left = 134.0
offset_top = 122.0
offset_right = 418.0
offset_bottom = 313.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="subtraction"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="result" type="Label" parent="subtraction/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_jn2h0")
text = "Fraction Subtraction"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="subtraction/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="first_fraction" type="MarginContainer" parent="subtraction/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="fraction" type="VBoxContainer" parent="subtraction/VBoxContainer/HBoxContainer/first_fraction"]
layout_mode = 2

[node name="numerator" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/first_fraction/fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "1"
horizontal_alignment = 1

[node name="divider" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/first_fraction/fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "-"
horizontal_alignment = 1

[node name="denominator" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/first_fraction/fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "4"
horizontal_alignment = 1

[node name="operrand" type="MarginContainer" parent="subtraction/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/operrand"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "-"
horizontal_alignment = 1

[node name="second_fraction" type="MarginContainer" parent="subtraction/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="fraction" type="VBoxContainer" parent="subtraction/VBoxContainer/HBoxContainer/second_fraction"]
layout_mode = 2

[node name="numerator" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/second_fraction/fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "2"
horizontal_alignment = 1

[node name="divider" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/second_fraction/fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "-"
horizontal_alignment = 1

[node name="denominator" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/second_fraction/fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "4"
horizontal_alignment = 1

[node name="equal" type="MarginContainer" parent="subtraction/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/equal"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "="
horizontal_alignment = 1

[node name="answer_fraction" type="MarginContainer" parent="subtraction/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="fraction" type="VBoxContainer" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction"]
layout_mode = 2

[node name="numerator" type="MarginContainer" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction/fraction"]
layout_mode = 2

[node name="NumeratorAnswer" type="LineEdit" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction/fraction/numerator"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jn2h0")
placeholder_text = "0"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction/fraction/numerator"]
layout_mode = 2
texture = ExtResource("4_ue4r3")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="divider" type="Label" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction/fraction"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "-"
horizontal_alignment = 1

[node name="denominator" type="MarginContainer" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction/fraction"]
layout_mode = 2

[node name="DenominatorAnswer" type="LineEdit" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction/fraction/denominator"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jn2h0")
placeholder_text = "0"
alignment = 1
max_length = 2
flat = true
caret_blink = true

[node name="NinePatchRect" type="NinePatchRect" parent="subtraction/VBoxContainer/HBoxContainer/answer_fraction/fraction/denominator"]
layout_mode = 2
texture = ExtResource("4_ue4r3")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="submit" type="MarginContainer" parent="."]
offset_left = 300.0
offset_top = 367.0
offset_right = 402.0
offset_bottom = 407.0
scale = Vector2(2, 2)

[node name="SubmitAnswer" type="Button" parent="submit"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_lnim6")
text = "SUBMIT"
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="submit"]
layout_mode = 2
texture = ExtResource("4_ue4r3")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="water_level" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 839.0
offset_top = 27.0
offset_right = 907.0
offset_bottom = 564.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="water_level"]
layout_mode = 2
min_value = 100.0
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("5_8dxfp")

[connection signal="pressed" from="submit/SubmitAnswer" to="." method="_on_submit_answer_pressed"]
